Prevent text overflow in chip component

--- a/components/src/core/components/Chip/chip.scss
+++ b/components/src/core/components/Chip/chip.scss
@@ -17,3 +17,7 @@
   border: 1px solid #e8eaef;
   background-color: transparent;
 }
+
+.oxd-chip-label{
+  word-break: break-word;
+}
